hard-gists/019fd5c706e0bc94879f/run.log
=== Docker Run Log for 019fd5c706e0bc94879f ===
Started at: Mi 29. Okt 11:20:51 CET 2025

[2025-10-29 11:20:52] START: Running container for 019fd5c706e0bc94879f
[2025-10-29 11:20:52] SUCCESS: Container b032109603cbb6658640fd529110a044bb26d131cd84af74e484be6f51356d23 started for 019fd5c706e0bc94879f
=== Container logs for 019fd5c706e0bc94879f ===
  File "/snippet.py", line 46
    print 'timeout', seconds
    ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 019fd5c706e0bc94879f ===
[2025-10-29 11:20:54] INFO: Container b032109603cbb6658640fd529110a044bb26d131cd84af74e484be6f51356d23 has stopped
